[build-system]
requires = [
    # setuptools >= 64 breaks editable builds:
    # https://github.com/scikit-build/scikit-build/pull/737#issuecomment-1215573830
    # setuptools < 64 is incompatible with Python 3.12.
    # So: no editable builds on Python 3.12, for now.
    "setuptools>=42,<64;python_version<'3.12'",
    "setuptools>=64;python_version>='3.12'",

    "wheel>=0.34.2",
    "cmake>=3.18",
    "scikit-build",
    "nanobind>=1.3",
    "ninja",
    "pcpp",
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
# nanobind does not support Py<3.8
skip = ["*-win-*", "[cp]p3[67]-*"]

[tool.cibuildwheel.linux]
# i686 does not have enough memory for LTO to complete
skip = ["[cp]p3[67]-*", "*_i686"]

[tool.cibuildwheel.macos]
archs = "x86_64 arm64"

[tool.cibuildwheel.macos.environment]
# Needed for full C++17 support
MACOSX_DEPLOYMENT_TARGET = "10.14"
