[build-system]
requires = [
    # setuptools >= 64 breaks editable builds:
    # https://github.com/scikit-build/scikit-build/pull/737#issuecomment-1215573830
    # setuptools < 64 is incompatible with Python 3.12.
    # So: no editable builds on Python 3.12, for now.
    "setuptools>=42,<64;python_version<'3.12'",
    "setuptools>=64;python_version>='3.12'",

    "wheel>=0.34.2",
    "scikit-build",
    "nanobind>=1.3",
    "pcpp",

    # Added dynamically in setup.py if needed
    # "cmake>=3.18",
    # "ninja",
]
build-backend = "setuptools.build_meta"

[tool.inducer-ci-support]
disable-editable-pip-install = true

[tool.ruff]
preview = true
exclude = [
    "isl",
    "aksetup_helper.py"
]
target-version = "py38"


[tool.ruff.lint]
extend-select = [
    "B",   # flake8-bugbear
    "C",   # flake8-comprehensions
    "E",   # pycodestyle
    "F",   # pyflakes
    "G",   # flake8-logging-format
    "I",   # flake8-isort
    "N",   # pep8-naming
    "NPY", # numpy
    "Q",   # flake8-quotes
    "UP",  # pyupgrade
    "RUF", # ruff
    "W",   # pycodestyle
]
extend-ignore = [
    "C90",  # McCabe complexity
    "E221", # multiple spaces before operator
    "E226", # missing whitespace around arithmetic operator
    "E402", # module-level import not at top of file
    "UP006", # updated annotations due to __future__ import
    "UP007", # updated annotations due to __future__ import
    "UP031", # use f-strings instead of %
    "UP032", # use f-strings instead of .format
]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "double"
multiline-quotes = "double"

[tool.ruff.lint.isort]
combine-as-imports = true
known-local-folder = [
    "islpy",
]
lines-after-imports = 2

[tool.cibuildwheel]
# nanobind does not support Py<3.8
# i686 does not have enough memory for LTO to complete
skip = ["pp*", "cp3[67]-*", "*_i686"]

test-requires = "pytest"
test-command = "pytest {project}/test"

[tool.cibuildwheel.macos.environment]
# Needed for full C++17 support
MACOSX_DEPLOYMENT_TARGET = "10.14"
