# Editable is broken with py>=3.12 because of
# https://github.com/scikit-build/scikit-build/issues/981
# disable-editable-pip-install

[flake8]
ignore = E126,E127,E128,E123,E226,E241,E242,E265,W503,E402
max-line-length=85

inline-quotes = "
docstring-quotes = """
multiline-quotes = """

# enable-flake8-bugbear

[metadata]
license_files =
   doc/misc.rst
